# grayscale-video

./: CMakeLists.txt  README.md  main.cpp
